css/style.css
:root {
	--primary-clr: #4a90e2;
	--clear-clr: #cecbcb;
	--dark-clr: #000000;
	--alert-clr: #e74c3c;
}

html {
	scroll-behavior: smooth;
	scroll-padding: 10rem;
}
body {
	font-family: 'Roboto', sans-serif;
}

h1,
h2,
h3,
h4 {
	font-family: 'Onest', serif;
}
.strong {
	color: var(--alert-clr);
}
.title {
	font-size: 3rem; 
	line-height: 1;
	color: var(--primary-clr);
}
p {
	color: var(--clear-clr);
}

.video-element {
  z-index: 0; 
}
/* animated border start */
.animated-border {
	color: var(--clear-clr);
	padding: 0.375rem 0.75rem;
	width: fit-content;
	background: var(--dark-clr);
	text-align: center;
	border-radius: 10px;
	position: relative;
	cursor: pointer;
}

@property --angle {
	syntax: '<angle>';
	initial-value: 0deg;
	inherits: false;
}

.animated-border::after,
.animated-border::before {
	content: '';
	position: absolute;
	height: 110%;
	width: 110%;
	background-image: conic-gradient(
		from var(--angle),
		#ff4545,
		rgb(4, 0, 255),
		#006aff,
		#7300ff,
		#ff4545
		);
		top: 50%;
		left: 50%;
		translate: -50% -50%;
		z-index: -1;
		padding: 5px;
		border-radius: 10px;
		animation: 3s spin linear infinite;
	}
	.animated-border::before {
		filter: blur(5px);
		opacity: 0.8;
	}
	
	.btn:hover {
		scale: 1.2;
	}
	@keyframes spin {
		from {
			--angle: 0deg;
		}
		to {
			--angle: 360deg;
		}
	}

	#background {
		scroll-behavior: smooth;
		scroll-padding: 10rem;
		position: absolute;
		top: 0;
		left: 0;
		right: 0;
		bottom: 0;
		z-index: -10;
		height: 100vh;
		width: 100vw;
		padding: 4rem 5%;
		display: flex;
		flex-direction: column;
		align-items: center;
		background: radial-gradient(125% 125% at 50% 10%, #000 40%, #63e 100%);
		overflow: auto;
	}
	#navbar {
		background-image: url('../assets/pictures/navbar.png');
		background-size: contain;
		background-repeat: no-repeat;
		background-position: center right;
		background-color: #0e0e0e;
	}
	.menu-item-custom {
		display: block;
		color: #ffffffcc;
		border-color: #374151;
	}
	.menu-item-custom:active {
		color: blue;
	}
	.menu-item-custom:hover {
		color: #3b82f6;
	}
	footer{
		display:flex;
		flex-direction:row;
		align-items:center;
		justify-content:center ;
		position:absolute;
		bottom:0;
		left:0;
		width:100vw;
		gap:3rem
		
	}
	footer img {
	width:1.5rem !important
	}
footer > h3{

text-align:center;


}
.social-links{
	display:flex;
	align-items:center;
	justify-content:space-around;
	gap:2rem;
}
@media (min-width: 768px) {
	.menu-item-custom:hover {
		color: #2563eb;
	}
}
@media screen and (max-width: 768px) {
	#navbar {
		background-image: none;
		
	}
	footer{
		display:none
	}
}

